<resources>
    //Ventanas de bienvenida, inicio de sesión, crear cuenta y menú
    <string name="app_name">Moda Móvil</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrar">Registrarse</string>
    <string name="mensaje_inicio_ses">Bienvenido. Ingresa los datos de tu cuenta</string>
    <string name="email">Email</string>
    <string name="contrasena">Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="nombre">Nombre</string>
    <string name="apepat">Apellido paterno</string>
    <string name="apemat">Apellido materno</string>
    <string name="correo">Correo</string>
    <string name="genero">Género</string>
    <string name="gen_muj">Mujer</string>
    <string name="gen_hom">Hombre</string>
    <string name="tipo_cuenta">Tipo de cuenta</string>
    <string name="tipo_vendedor">Vendedor</string>
    <string name="tipo_comprador">Comprador</string>
    <string name="men_vendedor">Te permite publicar tu ropa para venderla.</string>
    <string name="men_comprador">Te permite comprar ropa a cualquier vendedor en la App.</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_crear_cuenta">Crear cuenta</string>
    <string name="mensaje_cuenta_crea">Cuenta creada</string>
    <string name="eslogan_app">Ropa de segunda mano con causa</string>
    <string name="btn_perfil">Perfil</string>
    <string name="buscar_p">Buscar prenda</string>
    <string name="etiqueta_reciente">Lo más reciente</string>
    <string name="btn_inicio">Inicio</string>
    <string name="btn_ropa">Ropa</string>
    <string name="btn_donativos">Donativos</string>
    <string name="btn_carrito">Carrito</string>
    <string name="btn_pedidos">Pedidos</string>
    <string name="btn_edit_perf">Editar perfil</string>
    <string name="btn_camb_contra">Cambiar contraseña</string>
    <string name="nueva_contra">Nueva contraseña</string>
    <string name="btn_direcciones">Direcciones</string>
    <string name="btn_datospago">Datos de pago</string>
    <string name="btn_cerrarsesion">Cerrar sesión</string>
    <string name="btn_metopago">Métodos de pago</string>
    <string name="etiqueta_perfil">Perfil</string>
    <string name="btn_guardar">Guardar</string>
    <string name="conf_nueva_contra">Confirmar contraseña</string>
    <string name="tarjeta_deb">Tarjeta de débito</string>
    <string name="agregar_nueva_tarj">Agregar nueva tarjeta</string>
    <string name="num_tarjeta">Número de tarjeta</string>
    <string name="nom_titular">Nombre del titular de la tarjeta</string>
    <string name="fecha_exp">Fecha de vencimiento</string>
    <string name="ccv">CCV</string>
    <string name="agregar_nueva_dir">Agregar nueva dirección</string>
    <string name="calle">Calle</string>
    <string name="col">Colonia</string>
    <string name="no_ext">No.Exterior</string>
    <string name="cp">C.P.</string>
    <string name="muni">Municipio</string>
    <string name="estado">Estado</string>
    <string name="ropa">Ropa</string>
    <string name="donativos">Donativos</string>
    <string name="carrito">Carrito</string>
    <string name="title_activity_inicio_comprador">InicioComprador</string>
    <string name="eslogan">Ropa de segunda mano con causa</string>
    <string name="tipo_tarj">Tipo de tarjeta</string>
    <string name="tarj_deb">Débito</string>
    <string name="tarj_cred">Crédito</string>
    <string name="ropa_sub">Ropa subida</string>
    <string name="ropa_ven">Ropa vendida</string>
    <string name="nom_pren">Nombre prenda</string>
    <string name="talla">Talla</string>
    <string name="precio">Precio</string>
    <string name="elim_prenda">Eliminar prenda</string>
    <string name="ag_prenda">Agregar prenda</string>
    <string name="nuev_prenda">Nueva prenda</string>
    <string name="nom_prenda">Nombre prenda</string>
    <string name="sel_talla">Selecciona talla</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="uni">Uni</string>
    <string name="sel_cat">Selecciona categoría de prenda</string>
    <string name="descripcion">Descripción prenda</string>
    <string name="sub_fotos">Sube fotos de la prenda</string>
    <string name="subir_fot">Subir fotos</string>
    <string name="porcentaje">% para donar</string>
    <string name="sel_asoc">Selecciona asociación a la que donarás el porcentaje</string>
    <string name="donaras">Donarás</string>
    <string name="sub_pren">Subir prenda</string>
    <string name="nom_asoc">Nombre asociación</string>
    <string name="descripcion_prenda">Descripción</string>
    <string name="descrip">Agrega una descripción de la prenda.</string>


    <string name="pedidos">Pedidos</string>
    <string name="pendientes">Pendientes</string>
    <string name="entregados">Entregados</string>
    <string name="todo">Todo</string>

</resources>