<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="25dp"
    app:cardElevation="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">


        <TextView
            android:id="@+id/cardPrecio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cardEstadoo"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="-38dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="@font/poppins_semibold"
            android:text="$"
            android:textColor="@color/azul_intenso"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="112dp"
            android:layout_height="175dp"
            android:src="@drawable/imagennodisponible" />

        <TextView
            android:id="@+id/cardNombrePrenda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/nom_pren"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cardTalla"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cardNombrePrenda"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="-45dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="@font/poppins"
            android:text="@string/talla"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cardEstadoo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cardTalla"
            android:layout_marginStart="21dp"
            android:layout_marginBottom="-42dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="@font/poppins"
            android:text="@string/estado"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cardPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cardEstadoo"
            android:layout_marginStart="35dp"
            android:layout_marginBottom="-38dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/precio"
            android:textColor="@color/azul_intenso"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/cardTallaa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardNombrePrenda"
            android:layout_alignEnd="@+id/cardTalla"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="-25dp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/gris_oscuro"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtDonaras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/cardPrecio"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="-27dp"
            android:layout_toEndOf="@+id/imageView4"
            android:fontFamily="@font/poppins"
            android:text="Donarás $" />

        <TextView
            android:id="@+id/cardDonativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/cardPrecio"
            android:layout_alignEnd="@+id/txtDonaras"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="-35dp"
            android:textColor="@color/gris_oscuro"
            android:textSize="15sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>